force-app/main/default/objects/RR_Deactivate_Time__c/RR_Deactivate_Time__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting is use to capture the date and time of round robin deactivation.</description>
    <label>RR Deactivate Time</label>
</CustomObject>