force-app/main/default/objects/RR_Deactivate_Time__c/fields/Deactivation_Time__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Time__c</fullName>
    <label>Deactivation Time</label>
    <type>DateTime</type>
</CustomField>