force-app/main/default/objects/RR_Deactivate_Time__c/fields/Error_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Error_Email_Address__c</fullName>
    <label>Error Email Address</label>
    <type>TextArea</type>
</CustomField>