force-app/main/default/objects/RR_Deactivate_Time__c/fields/Pattern__c.field-meta.xml
<CustomField>
    <fullName>Pattern__c</fullName>
    <label>Pattern</label>
    <length>40</length>
    <type>Text</type>
</CustomField>