force-app/main/default/objects/RR_Deactivate_Time__c/fields/Reporting_Time__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Time__c</fullName>
    <label>Reporting Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>